--- a/index.htm
+++ b/index.htm
@@ -98,7 +98,7 @@
 <div class="content" id="instructions-content">
 	<div class="button" id="back">&lt; back</div>
 	<div>
-		<h1>Instructions</h1>
+		<h1>Instructions - new</h1>
 		<div class="nomobile">
 			<h2>Controls</h2>
 			<p>Use your arrow keys or [W,A,S,D] keys to navigate pacman.</p>
